# python_slate

./: pyproject.toml
run/: summarize_df.py
tests/: summarize_df_test.py
