[tool.poetry]
name = "run"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
docker-compose = "^1.29.2"
pytest = "^7.1.3"
commitizen = "^2.35.0"
pre-commit = "^2.20.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
